--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
@@ -53,7 +54,7 @@
   </ul>
 </div>
   <div class="navs">
-    <div><a href="#About">About Us <iconify-icon icon="material-symbols:arrow-drop-down" width="30px" class="dropDown"></iconify-icon></a></div>
+    <div><a href="#About">About Us <i class="bi bi-chevron-compact-down"></i></a></div>
     <div><a href="#services">Services</a></div>
     <div><a href="#MoreServices">Products</a></div>  
     <div><a href="#footer">Credentials</a></div>
