--- a/index.html
+++ b/index.html
@@ -223,21 +223,21 @@
   <div class="contacts">
             <ul class="list-unstyled mb-0">
               <li>
-                <iconify-icon icon="bxs:phone-call" style="color: #ff4600; position: absolute;" width="20"><a href="#!" class="text-white mb-24"></iconify-icon>1800-3002-7286</a>
+                <iconify-icon icon="bxs:phone-call" style="color: #ff4600; position: absolute; font-size: 20;" width="20"><a href="#!" class="text-white mb-24"></iconify-icon>1800-3002-7286</a>
               </li>
               <li>
-                <iconify-icon icon="bxs:phone-call" style="color: #ff4600; position: absolute;" width="20"> </iconify-icon><a href="#!" class="text-white">+91-222-378-6400</a>
+                <iconify-icon icon="bxs:phone-call" style="color: #ff4600; position: absolute; font-size: 20;" width="20"> </iconify-icon><a href="#!" class="text-white">+91-222-378-6400</a>
               </li>
               <li>
-                <iconify-icon icon="eva:email-fill" style="color: #ff4600; position: absolute;" width="20"></iconify-icon>
+                <iconify-icon icon="eva:email-fill" style="color: #ff4600; position: absolute; font-size: 20;" width="20"></iconify-icon>
                 <a href="#!" class="text-white">support@shmgroup.com</a>
               </li>
               <li>
-                <iconify-icon icon="eva:email-fill" style="color: #ff4600; position: absolute;" width="20"></iconify-icon>
+                <iconify-icon icon="eva:email-fill" style="color: #ff4600; position: absolute; font-size: 20;" width="20"></iconify-icon>
                 <a href="#!" class="text-white">hr@shmgroup.com</a>
               </li>
               <li>
-                <iconify-icon icon="entypo:location-pin" style="color: #ff4600; position: absolute;" width="20"></iconify-icon>
+                <iconify-icon icon="entypo:location-pin" style="color: #ff4600; position: absolute; font-size: 20;" width="20"></iconify-icon>
                 <a href="#!" class="text-white">Head Office BPT. Plot No. 51B<br> Magazine Street, 1st Lane<br> Darukhana, Mazagon, Mumbai, 400010</a>
               </li>
             </ul>
@@ -252,16 +252,16 @@
   
             <ul class="underline">
               <li>
-                <a href="#!" class="text-white">Facebook</a>
+                <a href="#!" class="text-white" style="font-size:20px">Facebook</a>
               </li>
               <li>
-                <a href="#!" class="text-white">LinkedIn</a>
+                <a href="#!" class="text-white" style="font-size:20px">LinkedIn</a>
               </li>
               <li>
-                <a href="#!" class="text-white">Twitter</a>
+                <a href="#!" class="text-white" style="font-size:20px">Twitter</a>
               </li>
               <li>
-                <a href="#!" class="text-white">YouTube</a>
+                <a href="#!" class="text-white" style="font-size:20px">YouTube</a>
               </li>
             </ul>
           </div>
