--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <h1>More Services</h1>
       <hr>
       <div class="row">
-        <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle242.png"/><p>Pyrotechnics Disposal</p></div>
+        <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle242.png" width: 800px;/><p>Pyrotechnics Disposal</p></div>
         <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle243.png"/><p>FRP Boat Repairs</p></div>
         <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle258.png"/><p>Gangway & Accomodation Ladders</p></div>
         <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle259.png"/><p>Training Seminars & Workshops</p></div>
