--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <iconify-icon icon="emojione-monotone:cross-mark" style="color: white;" width="40"></iconify-icon>
   </div>
   <ul>
-    <li><a href="#About" >About Us</a></li>
+    <li><a href="#About" >About Us <i class="bi bi-chevron-compact-down"></i></a></li>
     <li><a href="#services">Services</a></li>
     <li><a href="#MoreServices">Products</a></li>
     <li><a href="#footer">Credentials</a></li>
@@ -200,7 +200,7 @@
       <h1>More Services</h1>
       <hr>
       <div class="row">
-        <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle242.png" width: 800px;/><p>Pyrotechnics Disposal</p></div>
+        <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle242.png"/><p>Pyrotechnics Disposal</p></div>
         <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle243.png"/><p>FRP Boat Repairs</p></div>
         <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle258.png"/><p>Gangway & Accomodation Ladders</p></div>
         <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle259.png"/><p>Training Seminars & Workshops</p></div>
