--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 <div class="MobileNavbar">
   <div class="navMobile1" id="menu-icon1">
-    <iconify-icon icon="emojione-monotone:cross-mark" style="color: white;" width="40"></iconify-icon>
+    <iconify-icon icon="emojione-monotone:cross-mark"></iconify-icon>
   </div>
   <ul>
     <li><a href="#About" >About Us <i class="bi bi-chevron-compact-down"></i></a></li>
@@ -95,43 +95,43 @@
 </div>
 <div class="scrollable">
   <div class="do">
-    <iconify-icon icon="entypo:location-pin" style="color: #ff4600;" width="100px" height="100px"></iconify-icon>
+    <iconify-icon icon="entypo:location-pin"></iconify-icon>
       <p>All-India, Singapore, Dubai, Malaysia and Sri lanka coverage</p>
   </div>
   <div class="do">
-    <iconify-icon icon="heroicons:wrench-screwdriver-20-solid" style="color: #ff4600;" width="100px" height="100px"></iconify-icon>
+    <iconify-icon icon="heroicons:wrench-screwdriver-20-solid"></iconify-icon>
     <p>Lifeboats, FFA, Liferaft, Electronics, Cargo Gear and Ship repair service capability</p>
   </div>
   <div class="do">
-    <iconify-icon icon="foundation:target-two" style="color: #ff4600;" width="100"></iconify-icon>
+    <iconify-icon icon="foundation:target-two"></iconify-icon>
     <p>Single point comprehensive service support</p>
   </div>
   <div class="do">
-    <iconify-icon icon="fontisto:favorite" style="color: #ff4600;" width="100px" height="100px"></iconify-icon>
+    <iconify-icon icon="fontisto:favorite"></iconify-icon>
     <p>Track record for timely and quality services</p>
   </div>
   <div class="do">
-    <iconify-icon icon="ant-design:flag-filled" style="color: #ff4600;" width="100px" height="100px"></iconify-icon>
+    <iconify-icon icon="ant-design:flag-filled"></iconify-icon>
     <p>Major flag administration & class approvals</p>
   </div>
   <div class="do">
-    <iconify-icon icon="bi:person-x-fill" style="color: #ff4600;" width="100px" height="100px"></iconify-icon>
+    <iconify-icon icon="bi:person-x-fill"></iconify-icon>
     <p>Over 300 trained engineers and technicians</p>
   </div>
   <div class="do">
-   <iconify-icon icon="fluent:hat-graduation-12-filled" style="color: #ff4600;" width="100px" height="100px"></iconify-icon>
+   <iconify-icon icon="fluent:hat-graduation-12-filled"></iconify-icon>
    <p>Certfied workshops well-equipped with spares and inventory</p>
   </div>
   <div class="do">
-    <iconify-icon icon="fa-solid:warehouse" style="color: #ff4600;" width="100px" height="100px"></iconify-icon>
+    <iconify-icon icon="fa-solid:warehouse"></iconify-icon>
     <p>Custom bonded warehouse for stocking Duty free spares</p>
   </div>
   <div class="do">
-    <iconify-icon icon="ion:trash-bin" style="color: #ff4600;" width="100px" height="100px"></iconify-icon>
+    <iconify-icon icon="ion:trash-bin"></iconify-icon>
     <p>Lincesed to dispose Pyros as per PESO and DG Shipping</p>
   </div>
   <div class="do">
-    <iconify-icon icon="icon-park-solid:snacks" style="color: #ff4600;" width="100px" height="100px"></iconify-icon>
+    <iconify-icon icon="icon-park-solid:snacks"></iconify-icon>
     <p>Preferred vendor with Fleet service Agreements</p>
   </div>
 </div>
@@ -150,7 +150,7 @@
       </div>
       <div class="sub">
       <button class="btn">Learn More</button>
-      <span style="color:rgba(191, 191, 191, 0.933)">Download Catalogue</span>
+      <span>Download Catalogue</span>
     </div>
     <div class="sub1">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
@@ -161,7 +161,7 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide swiper-slide-1" style="">
+              <div class="swiper-slide swiper-slide-1">
               
               </div>
               <div class="swiper-slide swiper-slide-2">
@@ -199,11 +199,11 @@
       <h1>More Services</h1>
       <hr>
       <div class="row">
-        <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle242.png"/><p>Pyrotechnics Disposal</p></div>
-        <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle243.png"/><p>FRP Boat Repairs</p></div>
-        <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle258.png"/><p>Gangway & Accomodation Ladders</p></div>
-        <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle259.png"/><p>Training Seminars & Workshops</p></div>
-        <div class="col-sm-4" style="background-color:white;"><img src="Assets/Rectangle286.png"/><p>Fleet Service Agreements</p></div>
+        <div class="col-sm-4"><img src="Assets/Rectangle242.png"/><p>Pyrotechnics Disposal</p></div>
+        <div class="col-sm-4"><img src="Assets/Rectangle243.png"/><p>FRP Boat Repairs</p></div>
+        <div class="col-sm-4"><img src="Assets/Rectangle258.png"/><p>Gangway & Accomodation Ladders</p></div>
+        <div class="col-sm-4"><img src="Assets/Rectangle259.png"/><p>Training Seminars & Workshops</p></div>
+        <div class="col-sm-4"><img src="Assets/Rectangle286.png"/><p>Fleet Service Agreements</p></div>
       </div>
   </div>
 </section>
@@ -222,21 +222,21 @@
   <div class="contacts">
             <ul class="list-unstyled mb-0">
               <li>
-                <iconify-icon icon="bxs:phone-call" style="color: #ff4600; position: absolute; font-size: 20;" width="20"><a href="#!" class="text-white mb-24"></iconify-icon>1800-3002-7286</a>
+                <iconify-icon icon="bxs:phone-call"><a href="#!"></iconify-icon>1800-3002-7286</a>
               </li>
               <li>
-                <iconify-icon icon="bxs:phone-call" style="color: #ff4600; position: absolute; font-size: 20;" width="20"> </iconify-icon><a href="#!" class="text-white">+91-222-378-6400</a>
+                <iconify-icon icon="bxs:phone-call"> </iconify-icon><a href="#!" class="text-white">+91-222-378-6400</a>
               </li>
               <li>
-                <iconify-icon icon="eva:email-fill" style="color: #ff4600; position: absolute; font-size: 20;" width="20"></iconify-icon>
+                <iconify-icon icon="eva:email-fill"></iconify-icon>
                 <a href="#!" class="text-white">support@shmgroup.com</a>
               </li>
               <li>
-                <iconify-icon icon="eva:email-fill" style="color: #ff4600; position: absolute; font-size: 20;" width="20"></iconify-icon>
+                <iconify-icon icon="eva:email-fill"></iconify-icon>
                 <a href="#!" class="text-white">hr@shmgroup.com</a>
               </li>
               <li>
-                <iconify-icon icon="entypo:location-pin" style="color: #ff4600; position: absolute; font-size: 20;" width="20"></iconify-icon>
+                <iconify-icon icon="entypo:location-pin"></iconify-icon>
                 <a href="#!" class="text-white">Head Office BPT. Plot No. 51B<br> Magazine Street, 1st Lane<br> Darukhana, Mazagon, Mumbai, 400010</a>
               </li>
             </ul>
@@ -251,16 +251,16 @@
   
             <ul class="underline">
               <li>
-                <a href="#!" class="text-white" style="font-size:20px">Facebook</a>
+                <a href="#!" class="text-white">Facebook</a>
               </li>
               <li>
-                <a href="#!" class="text-white" style="font-size:20px">LinkedIn</a>
+                <a href="#!" class="text-white">LinkedIn</a>
               </li>
               <li>
-                <a href="#!" class="text-white" style="font-size:20px">Twitter</a>
+                <a href="#!" class="text-white">Twitter</a>
               </li>
               <li>
-                <a href="#!" class="text-white" style="font-size:20px">YouTube</a>
+                <a href="#!" class="text-white">YouTube</a>
               </li>
             </ul>
           </div>
@@ -284,7 +284,7 @@
 </div>
     <!-- Footer -->
   </section>
-  <div style="background-color: #FF4600; height: 80px;">
+  <div class="footerEnd">
     <div class="copyright">
       <p class="footerC"> © 2022 SHM Shipcare. All Rights Reserved.</p>
       <div class="disclaimer">
